# atendimento-acessivel

./: .gitignore  app_inclusão_deficientes (1).py  roadmap.md  setup-services.sh
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/services/: scheduling.py
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AudioRecorderButton.tsx  AvailabilityBoard.tsx  BookingsBoard.tsx  MessageInput.tsx  MessageList.tsx  ProfileSetup.tsx  TTSButton.tsx  VLibrasWidget.tsx
frontend/src/hooks/: useAudioRecorder.ts  useSpeechSynthesis.ts
