[project]
name = "chatbot-inclusivo-backend"
version = "0.1.0"
description = "API FastAPI para o Chatbot Inclusivo"
authors = [{ name = "Chatbot Inclusivo" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.114.2",
    "uvicorn[standard]==0.30.1",
    "httpx==0.27.0",
    "openai==1.61.1",
    "python-dotenv==1.0.1",
    "boto3==1.35.82",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = []

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
